--- a/client/src/pages/app/Tickets.module.css
+++ b/client/src/pages/app/Tickets.module.css
@@ -67,6 +67,7 @@
   color: var(--text-primary);
   font-size: 1.5rem;
   font-weight: 600;
+  margin-top: -60px; /* Move title up */
 }
 
 .addButton {
